# calculatorProtocol

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/operations/: AddOperation.h  BaseOperation.h  DivOperation.h  InvalidOperation.h  MulOperation.h  OperationType.h  SubOperation.h  VariantOperation.h
src/utils/: parseJsonFile.h
